Otimização do fluxo do agente e redução do tamanho do prompt de 66KB para 56, i.e. uma redução em termos de tokens de 18000 para 15500.